# stm32h563_Init_meson

./: .cproject  .project  README.md  STM32H563ZITX_FLASH.ld  meson.build  proj_imp Default.launch  run.sh  stm32_app.launch  stm32h5_board.ini  upload_command.sh
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  stm32h5xx_nucleo_conf.h
Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  syscalls.c
Core/Src/device/: STM32H563ZITX_FLASH.ld
Core/Startup/: .cproject  .project
Drivers/CMSIS/Device/ST/STM32H5xx/Include/: stm32h563xx.h  stm32h5xx.h
Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal.h  stm32h5xx_hal_adc.h  stm32h5xx_hal_pcd.h  stm32h5xx_ll_adc.h  stm32h5xx_ll_cortex.h  stm32h5xx_ll_system.h  stm32h5xx_ll_ucpd.h  stm32h5xx_ll_usb.h
Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_hal.c  stm32h5xx_hal_cortex.c  stm32h5xx_hal_pcd.c  stm32h5xx_hal_uart.c  stm32h5xx_hal_uart_ex.c  stm32h5xx_ll_dma.c  stm32h5xx_ll_exti.c  stm32h5xx_ll_rcc.c  stm32h5xx_ll_ucpd.c  stm32h5xx_ll_usb.c  stm32h5xx_ll_utils.c
